--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -80,7 +80,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 300;
+    font-weight: bold;
 }
 
 
@@ -98,7 +98,8 @@ a {
 
     &:hover {
         color: $text-color;
-        text-decoration: underline;
+        text-decoration: none;
+		text-shadow: 1px 0px 20px $brand-color;
     }
 }
 
@@ -202,3 +203,7 @@ pre {
         }
     }
 }
+
+/* TAB */
+.page-tab section {display:none;}
+.page-tab section:target {display:block;}
