--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -234,3 +234,58 @@
         }
     }
 }
+
+footer {
+    text-align: center;
+}
+
+.post header, .post article {
+    float: left;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
+    width: 49.99999%;
+}
+
+.post header {
+  text-align: center; 
+}
+
+
+.post ul li h3 {
+    margin: 10px 0px 0px 0px;
+}
+
+.post ul {
+    list-style-type: none;
+    margin-left: 0px;
+}
+
+main {
+	max-height: 480px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto; 
+}
+
+footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+footer nav a {
+    padding: 0em .5em;
+    font-size: 1.5em;
+}
+
+span.cr {
+    font-weight: bold;
+}
+
+header i.fa {
+    font-size: 12em;
+    margin-top: 15px;
+}
