--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,20 +2,20 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
-
-
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: "DejaVu Sans Mono", "Everson Mono", FreeMono, "Menlo", "Terminal", monospace;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$text-color:       #fefefe;
+$background-color: #150a1b;
+$brand-color:      #F44336;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
