--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,6 +19,7 @@ body {
     line-height: $base-line-height;
     font-weight: 300;
     color: $text-color;
+	border-top: 5px solid $brand-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
 }
