--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -260,12 +260,15 @@ footer {
 
 main {
 	max-height: 480px;
+	min-height: 320px;
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	margin: auto; 
+	margin: auto;
+	padding: 10px 0px;
+	height: 66%;
 }
 
 footer {
