--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="{{ site.description }}">
 		<meta name="author" content="{{ site.author.name }}" />
 		
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="{{ "/assets/main.css" | prepend: site.baseurl }}">
 		<link rel="canonical" href="{{ page.url | replace:'index.html#main','' | prepend: site.baseurl | prepend: site.url }}">
 	</head>
