--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,15 @@
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>{{ site.title }}</title>
-		<meta name="description" content="{{ site.description }}">
-		<meta name="author" content="{{ site.author.name }}" />
-		
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="{{ "/assets/main.css" | prepend: site.baseurl }}">
-		<link rel="canonical" href="{{ page.url | replace:'index.html#main','' | prepend: site.baseurl | prepend: site.url }}">
-	</head>
+	<title>{{ site.title }}</title>
+	<meta name="description" content="{{ site.description }}">
+	<meta name="author" content="{{ site.author.name }}" />
+
+	<link rel="stylesheet" href="//cdn.rawgit.com/dhg/Skeleton/master/css/normalize.css">
+	<link rel="stylesheet" href="//cdn.rawgit.com/dhg/Skeleton/master/css/skeleton.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="{{ "/assets/main.css" | prepend: site.baseurl }}">
+	<link rel="canonical" href="{{ page.url | replace:'index.html#main','' | prepend: site.baseurl | prepend: site.url }}">
+</head>
